--- a/src/main/webapp/resources/CSS/detailCSS.css
+++ b/src/main/webapp/resources/CSS/detailCSS.css
@@ -43,5 +43,5 @@ th,td{
 
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
-a:hover { color: purple; text-decoration: none;}
+a:hover { color: purple; text-decoration: underline;}
 
