--- a/src/main/webapp/resources/CSS/joinCSS.css
+++ b/src/main/webapp/resources/CSS/joinCSS.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
 *{
@@ -26,10 +27,7 @@ table{
     text-align: center;
     border-top: 1px solid #444444;
     border-collapse: collapse;
-}
-
-th{
-	background-color: rgb(249,242,266);
+    width:400px;
 }
 
 
@@ -43,5 +41,5 @@ th,td{
 
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
-a:hover { color: purple; text-decoration: none;}
+a:hover { color: purple; text-decoration: underline;}
 
