--- a/src/main/webapp/resources/CSS/boardWriteCSS.css
+++ b/src/main/webapp/resources/CSS/boardWriteCSS.css
@@ -24,13 +24,11 @@ table{
     align-items: center;
     margin: 0 auto;
     text-align: center;
-   	border: 1px solid #444444;
+    border: 1px solid black;
     border-collapse: collapse;
-    width:40%;
-}
+    width: 500px;
+    height: 200px;
 
-th{
-	font-size: medium;
 }
 
 
@@ -40,16 +38,22 @@ th,td{
 
 }
 
+.btn{
+	margin: 10px;
+}
+
 textarea {
     width: 100%;
     height: 6.25em;
     border: none;
     resize: none;
+    margin: 0px;
   }
+
 
 
 
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
-a:hover { color: purple; text-decoration: underline;}
+a:hover { color: purple; text-decoration: none;}
 
