--- a/src/main/webapp/resources/CSS/memberCSS.css
+++ b/src/main/webapp/resources/CSS/memberCSS.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
 *{
@@ -13,6 +14,9 @@
     text-align: center;
 }
 
+.btn{
+	margin: 10px;
+}
 
 section{
     text-align: center;
@@ -24,13 +28,9 @@ table{
     align-items: center;
     margin: 0 auto;
     text-align: center;
-   	border: 1px solid #444444;
+    border-top: 1px solid #444444;
     border-collapse: collapse;
-    width:40%;
-}
-
-th{
-	font-size: medium;
+    width:400px;
 }
 
 
@@ -39,13 +39,6 @@ th,td{
     padding: 10px;
 
 }
-
-textarea {
-    width: 100%;
-    height: 6.25em;
-    border: none;
-    resize: none;
-  }
 
 
 
