--- a/src/main/webapp/resources/CSS/detailCSS.css
+++ b/src/main/webapp/resources/CSS/detailCSS.css
@@ -26,7 +26,7 @@ table{
     text-align: center;
    	border: 1px solid #444444;
     border-collapse: collapse;
-    width:40%;
+    width:30%;
 }
 
 th{
@@ -46,6 +46,15 @@ textarea {
     border: none;
     resize: none;
   }
+
+.content {
+	width:200px;
+	height:200px;
+}
+
+.btn{
+	margin: 10px;
+}
 
 
 
