--- a/src/main/webapp/resources/CSS/memberlist.css
+++ b/src/main/webapp/resources/CSS/memberlist.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
 *{
@@ -14,9 +13,6 @@
     text-align: center;
 }
 
-.btn{
-	margin: 10px;
-}
 
 section{
     text-align: center;
@@ -30,7 +26,11 @@ table{
     text-align: center;
     border-top: 1px solid #444444;
     border-collapse: collapse;
-    width:400px;
+    width: 30%;
+}
+
+th{
+	background-color: rgb(249,242,266);
 }
 
 
@@ -40,12 +40,9 @@ th,td{
 
 }
 
-.btn{
-	margin: 10px;
-}
 
 
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
-a:hover { color: purple; text-decoration: underline;}
+a:hover { color: purple; text-decoration: none;}
 
