--- a/src/main/webapp/resources/CSS/detailCSS.css
+++ b/src/main/webapp/resources/CSS/detailCSS.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
+
+
 *{
     box-sizing: border-box;
     margin: 0auto;
@@ -18,6 +20,7 @@ section{
     text-align: center;
     place-items: center;
     margin: 30px;
+    align-content: center;
 }
 
 table{
@@ -27,7 +30,19 @@ table{
    	border: 1px solid #444444;
     border-collapse: collapse;
     width:30%;
+    padding: 10px;
 }
+
+.comment{
+	align-items: center;
+    margin: 0 auto;
+    text-align: center;
+   	border-radius: 2rem;
+    border-collapse: collapse;
+    width:30%;
+    padding: 10px;
+}
+
 
 th{
 	font-size: medium;
@@ -46,6 +61,10 @@ textarea {
     border: none;
     resize: none;
   }
+
+.focused-input{
+	height: 40%
+}
 
 .content {
 	width:200px;
