--- a/src/main/webapp/resources/CSS/memberlist.css
+++ b/src/main/webapp/resources/CSS/memberlist.css
@@ -40,7 +40,52 @@ th,td{
 
 }
 
+.btn{
+	margin: 10px;
+}
 
+.button_base {
+    margin: 0;
+    border: 0;
+    font-size: 13px;
+    position: relative;
+    top: 50%;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: default;
+    padding: 5px;
+}
+
+.button_base:hover {
+    cursor: pointer;
+}
+
+
+.b_butoon {
+    color: #000000;
+    border: #000000 solid 1px;
+    background-color: #FFECD9;
+    margin:5px;
+}
+
+.b_butoon:hover {
+        color: #ffffff;
+        background-color: #000000;
+    }
+    
+.b1_butoon {
+    color: #000000;
+    border: #000000 solid 1px;
+    background-color: #FFD9D9;
+    margin:5px;
+}
+
+ .b1_butoon:hover {
+        color: #ffffff;
+        background-color: #000000;
+    }
 
 a:link { color: black; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
